2016-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Added mogrify
	-preserve-timestamp option to preserve file access and
	modification timestamps.  Contributed by Niko Rosvall via
	SourceForge patch #45 "preserve-timestamp option for mogrify
	command."

2016-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c: Added ReadBlobLSBSignedShort(),
	ReadBlobMSBSignedShort(),
	ReadBlobLSBSignedLong(),ReadBlobMSBSignedLong(),
	WriteBlobLSBSignedShort(), WriteBlobLSBSignedLong(),
	WriteBlobMSBSignedLong(), WriteBlobMSBSignedShort() for doing I/O
	on signed integer types without the need for dangerous casts or
	unexpected values due to signed/unsigned conversion.

2016-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with latest changes.

	* magick/constitute.c (ReadImage): Added asserts to check that the
	I/O blob is not still open in the returned image since this causes
	problems.

	* magick/blob.c (CloneBlobInfo): Use a cloning approach which does
	not require manually keeping structure members in sync.

	* coders/msl.c (ProcessMSLScript): Need to close I/O blob before
	returning.

	* coders/psd.c (ReadPSDImage): Assure that allocated image is not
	dereferenced before checking if it is NULL.  Check some memory
	calculations for overflow.
	(ReadPSDImage): Need to close I/O blob before returning.

	* coders/dib.c (ReadDIBImage): Use DestroyBlob() rather than
	DestroyBlobInfo().

	* coders/bmp.c (ReadBMPImage): Use DestroyBlob() rather than
	DestroyBlobInfo().

	* magick/blob.c: Improve blob tracing.

2016-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix reading 24-bit Microsoft BMP
	which claims to have a colormap.

2016-04-13 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* PerlMagick/t/input_complex_lsb_double_V4.mat Demo Matlab V4
	complex file.
	* coders/mat.c Missing break added.
