@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160423"
-#define public MagickPackageReleaseDate "snapshot-20160423"
+#define public MagickPackageVersionAddendum ".020160424"
+#define public MagickPackageReleaseDate "snapshot-20160424"
